src/Kanbas/Navigation/index.css
.wd-kanbas-navigation {
  background-color: black;
  list-style: none;
  padding: 0px;
  margin: 0px;
  width: 80px;
  height: 100vh;
  position: fixed;
}

.wd-kanbas-navigation li {
  padding: 10px;
  margin-bottom: 10px;
  font-size: 0.8em;
  text-align: center;
}

.wd-kanbas-navigation li.wd-active {
  background-color: white;
}

.wd-kanbas-navigation li.wd-active a {
  color: #a32424;
}

.wd-kanbas-navigation li a {
  color: white;
  text-decoration: none;
}

.wd-kanbas-navigation a i {
  color: #a32424;
  font-size: 2em;
  margin-bottom: 7px;
  display: block;
}

.wd-kanbas-navigation a i #text {
  color: #a32424;
}

